--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <body>
         <div class="card-outer">
             <div class="card">
+                <!--      Card Front View            -->
                 <div class="card-front">
                     <img src="https://media.licdn.com/dms/image/D5603AQG3vfNaYpXu0Q/profile-displayphoto-shrink_800_800/0/1672807885663?e=2147483647&v=beta&t=kKSl4rWPhSsUCy0_6ja5a2KYhh6-j8-Oq91FIJzILO4" width="100%" height="90%" alt="Goutham">
                 </div>
+                <!--      Card Back View           -->
                 <div class="card-back">
+                    <!--      Personal Details                -->
                     <h1>Sambaraju Goutham</h1>
                     <p>Full Stack Developer</p>
                     <p>sambarajugoutham1994@gmail.com</p>
                     <p>+91 9959389222</p>
+                    <!--        Social Accounts              -->
                     <ul type="none">
                         <li><a href="https://www.linkedin.com/in/goutham-sambaraju-2b4b15184/"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                        <li><a><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://github.com/GouthamS29"><i class="fa-brands fa-github"></i></a></li>
                         <li><a href="https://www.hackerrank.com/goutham_29"><i class="fa-brands fa-hackerrank" style="color: #50a55a;"></i></a></li>
                     </ul>
                 </div>
